Fixing margin (again)

--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@ layout: default
 
 
 <div id="accordion">
-    <div class="card">
+    <div class="card faq-question-card">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link faq-question" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -24,7 +24,7 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card faq-question-card">
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
           <button class="btn btn-link faq-question collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -38,7 +38,7 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card faq-question-card">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link faq-question collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
