--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
-<p>Below are some questions we often get asked, if you have any other questions you can reach us on the <a href="contact.html">contact page</a>.</p>
+<p>Below are some questions we often get asked. If you have any other questions you can reach us on the <a href="contact.html">contact page</a>.</p>
 
 
 <div id="accordion">
